Fixed menu height on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -173,24 +173,32 @@ $footer-color: white;
   &.dummy {
     height: 76px;
   }
-  .navbar-brand img {
-    max-height: 60px;
-    padding-top: 12px;
-  }
-  .navbar-menu {
-    margin-bottom: 18px;
-    .navbar-dropdown {
-      top: 40px;
-    }
-  }
 
-  .navbar-item {
-    line-height: 1.5;
-    padding-top: 0.1rem;
-    padding-bottom: 0.15rem;
-    .navbar-link {
-      padding-top: 0;
-      padding-bottom: 0;
+  &.is-fixed-top {
+    .navbar-brand img {
+      max-height: 60px;
+      padding-top: 12px;
+    }
+    .navbar-menu {
+
+      @media screen and (max-width: 1023px) {
+        max-height: calc(100vh - 5rem);
+      }
+
+      margin-bottom: 18px;
+      .navbar-dropdown {
+        top: 40px;
+      }
+    }
+
+    .navbar-item {
+      line-height: 1.5;
+      padding-top: 0.1rem;
+      padding-bottom: 0.15rem;
+      .navbar-link {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
   }
 }
